--- a/ManifoldInterceptMethod/ManifoldInterceptMethod.vcxproj.filters
+++ b/ManifoldInterceptMethod/ManifoldInterceptMethod.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Planner.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Interpolator.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="demo.h">
